<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@mipmap/wpicon">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleEnabled="false"
            app:contentScrim="@color/colorPrimary"
            app:statusBarScrim="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true">

            <com.james.papertales.views.SquareImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                app:layout_collapseMode="parallax"
                android:src="@mipmap/icontwo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="212dp"
                android:text="@string/app_name"
                android:id="@+id/textView"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/textColorPrimary"
                app:layout_collapseMode="parallax"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:text="@string/app_desc"
                android:id="@+id/textView3"
                android:gravity="center_horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/textColorSecondary"
                app:layout_collapseMode="parallax"
                android:textSize="14sp" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:title="@string/title_about" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/recycler"
        android:padding="4dp"
        android:clipToPadding="false"
        android:scrollbars="vertical"/>

</android.support.design.widget.CoordinatorLayout>
