<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        app:layout_collapseMode="parallax" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.james.papertales.views.CustomImageView
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:layout_gravity="bottom"
        android:src="@drawable/gradient_flipped" />

    <com.james.papertales.views.PageIndicator
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:id="@+id/download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:orientation="vertical">

            <com.james.papertales.views.SquareImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:tint="@color/textColorPrimary"
                app:srcCompat="@drawable/ic_download" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/action_download"
                android:textColor="@color/textColorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:orientation="vertical">

            <com.james.papertales.views.SquareImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:tint="@color/textColorPrimary"
                app:srcCompat="@drawable/ic_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/action_share"
                android:textColor="@color/textColorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/apply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:orientation="vertical">

            <com.james.papertales.views.SquareImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:tint="@color/textColorPrimary"
                app:srcCompat="@drawable/ic_wallpaper" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/action_apply"
                android:textColor="@color/textColorSecondary"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/gradient"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

</FrameLayout>